auth firebas and user

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -26,22 +26,22 @@
       </a>
     </li>
 
-    <li routerLink="/ingreso-egreso" class="nav-item">
-      <a class="nav-link">
+    <li class="nav-item">
+      <a routerLink="/ingreso-egreso" class="nav-link">
         <i class="menu-icon fa fa-clipboard-list"></i>
         <span class="menu-title">Ingresos y Egresos</span>
       </a>
     </li>
 
-    <li routerLink="/detalle" class="nav-item">
-      <a class="nav-link">
+    <li class="nav-item">
+      <a routerLink="/detalle" class="nav-link">
         <i class="menu-icon fa fa-table"></i>
         <span class="menu-title">Detalle</span>
       </a>
     </li>
 
-    <li class="nav-item">
-      <a routerLink="/login" class="nav-link cursor">
+    <li (click)="logout()" class="nav-item">
+      <a  class="nav-link cursor">
         <i class="menu-icon fa fa-sign-out-alt"></i>
         <span class="menu-title">Cerrar sesión</span>
       </a>
