auth firebase and reducer

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -43,7 +43,12 @@
             </div>
 
             <div class="form-group">
-              <button [disabled]="loginForm.invalid" class="btn btn-primary submit-btn btn-block" type="submit">Login</button>
+              <button *ngIf="!loading" [disabled]="loginForm.invalid" class="btn btn-primary submit-btn btn-block" type="submit">Login</button>
+              <button *ngIf="loading" [disabled]="true"
+                      class="btn btn-primary submit-btn btn-block"
+                      type="button">
+                <i class="fa fa-spin fa-sync"></i>
+                Espere...</button>
             </div>
 
 
