--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -55,7 +55,12 @@
             </div>
 
             <div class="form-group">
-              <button [disabled]="registroForm.invalid" class="btn btn-primary submit-btn btn-block" type="submit">Crear cuenta</button>
+              <button *ngIf="!loading" [disabled]="registroForm.invalid" class="btn btn-primary submit-btn btn-block" type="submit">Crear cuenta</button>
+              <button *ngIf="loading" [disabled]="true"
+                      class="btn btn-primary submit-btn btn-block"
+                      type="button">
+                <i class="fa fa-spin fa-sync"></i>
+                Espere...</button>
             </div>
             <div class="text-block text-center my-3">
               <span class="text-small font-weight-semibold">ya tienes una cuenta?</span>
