--- a/src/app/ingreso-egreso/detalle/detalle.component.html
+++ b/src/app/ingreso-egreso/detalle/detalle.component.html
@@ -15,11 +15,19 @@
           </thead>
 
           <tbody>
-          <tr>
-            <td>Descripción</td>
-            <td>Monto</td>
-            <td>Tipo</td>
-            <td>acciones</td>
+          <tr *ngFor="let item of ingresosEgresos">
+            <td>{{ item.description }}</td>
+            <td>{{ item.amount | currency}}</td>
+            <td [class.text-success]="item.type === 'ingreso'"
+                [class.text-danger]="item.type === 'egreso'">
+              {{ item.type }}
+            </td>
+            <td>
+              <button (click)="borrar(item.uid)" type="button" class="btn btn-danger">
+                <i class="fa fa-trash"></i>
+                Borrar
+              </button>
+            </td>
           </tr>
           </tbody>
 
