--- a/src/app/ingreso-egreso/ingreso-egreso.component.html
+++ b/src/app/ingreso-egreso/ingreso-egreso.component.html
@@ -7,12 +7,13 @@
           Especifique el monto y el tipo
         </p>
 
-        <form>
+        <form [formGroup]="ingresoForm" (ngSubmit)="save()">
 
           <div class="form-group">
             <label>Descripción</label>
             <input type="text"
                    class="form-control"
+                   formControlName="description"
                    placeholder="Descripción"
                    name="descripcion">
           </div>
@@ -21,6 +22,7 @@
             <label>Monto</label>
             <input type="number"
                    class="form-control"
+                   formControlName="amount"
                    placeholder="Monto"
                    name="monto">
             <p>
@@ -31,14 +33,19 @@
           <div class="form-group">
             <label>Tipo</label>
             <br>
-            <button type="button" class="btn btn-primary btn-block">Ingreso</button>
-            <!-- <button type="button" class="btn btn-warning btn-block">Egreso</button> -->
+            <button *ngIf="type === 'ingreso'" (click)="type = 'egreso'" type="button" class="btn btn-primary btn-block">Ingreso</button>
+             <button *ngIf="type === 'egreso'" (click)="type = 'ingreso'" type="button" class="btn btn-warning btn-block">Egreso</button>
           </div>
 
           <hr>
-          <button type="button" class="btn btn-success mr-2">
+          <button *ngIf="!loading" [disabled]="ingresoForm.invalid" type="submit" class="btn btn-success mr-2">
             <i class="fa fa-save"></i>
             Agregar
+          </button>
+
+          <button *ngIf="loading" [disabled]="true" type="submit" class="btn btn-success mr-2">
+            <i class="fa fa-spin fa-sync"></i>
+            Guardando...
           </button>
 
           <!--
