--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -9,9 +9,9 @@
           </div>
 
           <div class="text-wrapper">
-            <p class="profile-name">Cristobal Colón</p>
+            <p class="profile-name">{{name}}</p>
             <div>
-              <small class="designation text-muted">Gerente</small>
+              <small class="designation text-muted">Administrator</small>
             </div>
           </div>
         </div>
